Fixed an issue where items were not aligned properly in listing details

--- a/web/src/styles/sass/booking-engine/bookingoverview.scss
+++ b/web/src/styles/sass/booking-engine/bookingoverview.scss
@@ -16,7 +16,6 @@ $border-radius: 8px;
 
   @media (max-width: 768px) {
     padding: 10px;
-    width: 100%;
   
   }
 
