--- a/web/src/styles/sass/booking-engine/listingDetails.scss
+++ b/web/src/styles/sass/booking-engine/listingDetails.scss
@@ -12,7 +12,10 @@
     gap: 20px;
     margin: 0 auto;
     max-width: 1500px; // or any value that fits your design
-    padding: 0 30px; // optional horizontal padding inside the centered layout
+
+    @media (max-width: 768px) {
+      flex-direction: column;
+    }
 
     .property-container {
       .image-section {
@@ -25,6 +28,10 @@
           grid-template-rows: repeat(1, 1fr);
           column-gap: 10px;
           align-items: center;
+
+          @media (max-width: 768px) {
+            grid-template-columns: none;
+          }
 
           .main-image {
             width: 100%;
@@ -40,6 +47,10 @@
             grid-template-rows: 1fr 1fr;
             gap: 10px;
             height: 100%;
+
+            @media (max-width: 768px) {
+              display: none;
+            }
 
             .small-image {
               width: 100%;
@@ -221,7 +232,7 @@
       .date-container {
         display: flex;
         align-items: center;
-        gap: 20px;
+        gap: 10px;
         font-family: Arial, sans-serif;
         font-weight: 200;
 
@@ -239,7 +250,6 @@
 
           .inputField {
             background-color: white;
-            padding: 10px 20px;
             border: none;
             border-radius: 12px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
